--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
     "axios": "^1.7.3",
     "firebase": "^10.12.5",
+    "framer-motion": "^11.3.31",
+    "material-react-toastify": "^10.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "redux-persist": "^6.0.0"
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "stripe": "^16.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
