--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/react-stripe-js": "^2.8.0",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.6",
     "firebase": "^10.12.5",
     "framer-motion": "^11.3.31",
     "material-react-toastify": "^10.0.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
